force-app/main/default/objects/FNS_ApplicationWithOfficer__c/FNS_ApplicationWithOfficer__c.object-meta.xml
<CustomObject>
    <description>Application with Officer</description>
    <label>Application with Officer</label>
    <nameField>
        <displayFormat>AO-{00000}</displayFormat>
        <label>Application with Officer No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application with Officers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>