force-app/main/default/objects/FNS_ApplicationWithOfficer__c/fields/FNS_Application__c.field-meta.xml
<CustomField>
    <fullName>FNS_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Application with Officers</relationshipLabel>
    <relationshipName>Application_with_Officers</relationshipName>
    <type>Lookup</type>
</CustomField>