force-app/main/default/objects/FNS_ApplicationWithOfficer__c/fields/FNS_Officer__c.field-meta.xml
<CustomField>
    <fullName>FNS_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Officer</description>
    <label>Officer</label>
    <referenceTo>FNS_Officer__c</referenceTo>
    <relationshipLabel>Application with Officers</relationshipLabel>
    <relationshipName>Application_with_Officers</relationshipName>
    <type>Lookup</type>
</CustomField>