force-app/main/default/objects/FNS_ApplicationWithOfficer__c/fields/FNS_OfficerDescription__c.field-meta.xml
<CustomField>
    <fullName>FNS_OfficerDescription__c</fullName>
    <label>Officer Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>