force-app/main/default/objects/FNS_ApplicationWithOfficer__c/fields/FNS_OfficerRole__c.field-meta.xml
<CustomField>
    <fullName>FNS_OfficerRole__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_Role</valueSetName>
    </valueSet>
</CustomField>