force-app/main/default/objects/FNS_ApplicationWithOfficer__c/recordTypes/FNS_ApplicationWithOfficer.recordType-meta.xml
<RecordType>
    <fullName>FNS_ApplicationWithOfficer</fullName>
    <active>true</active>
    <label>Application with Officer</label>
</RecordType>