force-app/main/default/objects/FNS_ApplicationWithOfficer__c/recordTypes/FNS_ApplicationWithOfficerReadOnly.recordType-meta.xml
<RecordType>
    <fullName>FNS_ApplicationWithOfficerReadOnly</fullName>
    <active>true</active>
    <label>Application With Officer Read Only</label>
</RecordType>