force-app/main/default/objects/FNS_ApplicationWithOfficer__c/listViews/FNS_ApplicationWithOfficers.listView-meta.xml
<ListView>
    <fullName>FNS_ApplicationWithOfficers</fullName>
    <columns>NAME</columns>
    <columns>FNS_Application__c</columns>
    <columns>FNS_Officer__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Application With Officers</label>
</ListView>